[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Images/volume_icons.png" type="Texture" id=2]
[ext_resource path="res://bw_theme.tres" type="Theme" id=3]
[ext_resource path="res://Images/menu_icon.png" type="Texture" id=4]
[ext_resource path="res://Font/font64.tres" type="DynamicFont" id=5]
[ext_resource path="res://Font/font16.tres" type="DynamicFont" id=6]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float threshold : hint_range(0, 1);

void fragment() {
	COLOR = texture(TEXTURE,UV,1);
	float avg = threshold+(sin(TIME))/2.0;
	avg *= UV.x * UV.y;
	COLOR.rgb = vec3(avg);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/threshold = 0.731

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="ColorRect" parent="."]
material = SubResource( 2 )
margin_right = 960.0
margin_bottom = 576.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblTitle" type="Label" parent="Control"]
margin_left = 43.0
margin_top = 24.0
margin_right = 296.0
margin_bottom = 187.0
custom_fonts/font = ExtResource( 5 )
text = "Light
     Age"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnStart" type="Button" parent="Control"]
margin_left = 64.0
margin_top = 320.0
margin_right = 216.0
margin_bottom = 392.0
text = "Start"
icon = ExtResource( 4 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnContinue" type="Button" parent="Control"]
margin_left = 64.0
margin_top = 240.0
margin_right = 272.0
margin_bottom = 312.0
text = "Continue"
icon = ExtResource( 4 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnAbout" type="Button" parent="Control"]
margin_left = 64.0
margin_top = 404.0
margin_right = 231.0
margin_bottom = 476.0
text = "About"
icon = ExtResource( 4 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblVersion" type="Label" parent="Control"]
margin_left = 16.0
margin_top = 528.0
margin_right = 58.0
margin_bottom = 555.0
custom_fonts/font = ExtResource( 6 )
text = "v1.2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="aboutPopup" type="PopupPanel" parent="Control"]
visible = true
margin_left = 480.0
margin_top = 80.0
margin_right = 832.0
margin_bottom = 472.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/aboutPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/aboutPopup/VBoxContainer"]
margin_right = 336.0
margin_bottom = 186.0
size_flags_vertical = 3
text = "Rudy Vicario
2021

#B&WJam"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnTwitter" type="LinkButton" parent="Control/aboutPopup/VBoxContainer"]
margin_top = 196.0
margin_right = 336.0
margin_bottom = 246.0
rect_min_size = Vector2( 0, 50 )
text = "Twitter (rudyvic95)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnWebsite" type="LinkButton" parent="Control/aboutPopup/VBoxContainer"]
margin_top = 256.0
margin_right = 336.0
margin_bottom = 306.0
rect_min_size = Vector2( 0, 50 )
text = "Website"

[node name="btnItchio" type="LinkButton" parent="Control/aboutPopup/VBoxContainer"]
margin_top = 316.0
margin_right = 336.0
margin_bottom = 376.0
rect_min_size = Vector2( 0, 60 )
text = "Itch.io (rudyvic)"

[node name="btnMute" type="Button" parent="."]
margin_left = 80.0
margin_top = 520.0
margin_right = 124.0
margin_bottom = 560.0
toggle_mode = true
icon = SubResource( 3 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Control/btnStart" to="." method="_on_btnStart"]
[connection signal="pressed" from="Control/btnContinue" to="." method="_on_btnContinue_pressed"]
[connection signal="pressed" from="Control/btnAbout" to="." method="_on_btnAbout"]
[connection signal="pressed" from="Control/aboutPopup/VBoxContainer/btnTwitter" to="." method="_on_btnTwitter_pressed"]
[connection signal="pressed" from="Control/aboutPopup/VBoxContainer/btnWebsite" to="." method="_on_btnWebsite_pressed"]
[connection signal="pressed" from="Control/aboutPopup/VBoxContainer/btnItchio" to="." method="_on_btnItchio_pressed"]
[connection signal="pressed" from="btnMute" to="." method="_on_btnMute_pressed"]
